--- a/sections/ad/4_evaluation.tex
+++ b/sections/ad/4_evaluation.tex
@@ -44,7 +44,7 @@ Analysts can observe the progress made by \animatedead{} through the reporting p
 
 \begin{figure*}[t]
     \centering
-    \includegraphics[width=\textwidth]{figures/ad/execution_convergence.pdf}
+    \includegraphics[width=\textwidth]{figures/ad/execution_convergence_2rows.pdf}
     \caption{Unique files discovered over time using DFS and Branch coverage guided path prioritization. Branch coverage approach results in a higher number of discovered files while DFS gets stuck in the same parts of the code.}
     \label{fig:execution_convergence}
 \end{figure*}
@@ -163,7 +163,7 @@ Using this code-coverage for reachability, allows us to produce debloated web ap
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=0.9\columnwidth]{figures/ad/cac_reduction_bw.pdf}
+    \includegraphics[width=0.8\linewidth]{figures/ad/cac_reduction_bw.pdf}
     \caption{Reduction of Critical API Calls.}
     \label{fig:cac_reduction}
 \end{figure}
