--- a/sections/chapter_one_intro.tex
+++ b/sections/chapter_one_intro.tex
@@ -20,10 +20,12 @@ To measure the performance of debloating schemes in reducing the attack-surface 
 
 
 
-\section{Contributions}
+\section{Thesis statement and contributions}
 
-In this thesis, we demonstrate the effectiveness of software debloating techniques in reducing the attack-surface of web applications through source code and security metrics. 
-Moreover, we design and develop systems to debloat popular web applications and quantify their effectiveness. The main contributions of this thesis are:
+Our thesis statement for this dissertation is that \textit{``Modern web applications expose themselves to an unnecessarily large attack-surface due to code-bloat. Software debloating can effectively identify and remove the unused code and therefore protect web applications against the exploitation of vulnerabilities in the unnecessary modules.''}
+
+In this dissertation, we demonstrate the effectiveness of software debloating techniques in reducing the attack-surface of web applications through source code and security metrics. 
+Moreover, we design and develop frameworks to debloat popular web applications and quantify their effectiveness in reducing their attack surface. The main contributions of this dissertation are as follows:
 
 \begin{itemize}
     \item We conduct an analysis on four popular PHP applications and characterize the source of code-bloat in them. After identifying the source of the bloat, we propose two dynamic debloating approaches, namely file and function level debloating and evaluate their effectiveness in removing severe security vulnerabilities and reducing the attack-surface of target web applications in Chapter~\ref{chap:lim}.
