--- a/sections/dbltr/experimentaldesign.tex
+++ b/sections/dbltr/experimentaldesign.tex
@@ -4,7 +4,7 @@
 \begin{figure}[t]
     \centering
     \includegraphics[]{figures/dbltr/EnvironmentPreparation.pdf}
-    \caption{During the training phase, we collect user interaction code coverage traces to generate clusters. Based on these clusters, specialized debloated copies of web applications are produced for each cluster.}
+    \caption{During the training phase, we collect user interaction code-coverage traces to generate clusters. Based on these clusters, specialized debloated copies of web applications are produced for each cluster.}
     \label{fig:environment_preparation}
 \end{figure}
 
