--- a/sections/dbltr/userstudy.tex
+++ b/sections/dbltr/userstudy.tex
@@ -52,7 +52,7 @@ We use a PHP code profiler to collect the usage traces from user interactions in
 
 \begin{figure}[t]
     \centering
-    \includegraphics[width=\linewidth]{figures/dbltr/userstudy_boxplots.pdf}
+    \includegraphics[width=0.8\linewidth]{figures/dbltr/userstudy_boxplots.pdf}
     \caption{Distribution of requests and covered files for user-study participants. For box plots of phpMyAdmin and WordPress refer the left y-axis and for Magento, refer to the right y-axis.}
 	\label{fig:userstudystats}
 \end{figure}
