--- a/sections/lim/parts/abstract.tex
+++ b/sections/lim/parts/abstract.tex
@@ -25,6 +25,6 @@ and abusable PHP gadgets.
 
 %Use of rich web applications is becoming more widespread these days, as we move our complex systems to the web, we face different types of attack vectors and complex systems are harder to test, debug and reason about. One solid line of defense against exploitation has always been attack-surface reduction, by limiting access to unnecessary services we can potentially prevent attackers from exploiting vulnerabilities in them. In this paper, we talk about a concept well known in binary world but less studied in the context of web. Software debloating is the process of removing code that is not necessary, e.g., instrumented by specific subset of users.
 
-%First, we analyze four popular PHP web applications* top map known vulnerabilities to parts of code that results them, the chosen web applications span over four main web application categories namely, Administration tools, Wikis, CMSs and Online Shops. Second step is to dynamically analyze the applications to see if vulnerable lines of code are fired during user interaction. To address that, we create automation script to perform the tasks mentioned in online tutorials of those applications. To come up with a representative profile of general users of each application we enhance the code coverage from tutorials with the coverage from spiders that crawl web applications and monkey tests that try to brute force every possible action within the application. Third, based on the coverage resulted from tests in step two, we measure the coverage of code paths that intersect with known vulnerable lines. Arguably, if most users of an application do not use a feature, that feature can be removed, hence, removing the vulnerabilities within it.
+%First, we analyze four popular PHP web applications* top map known vulnerabilities to parts of code that results them, the chosen web applications span over four main web application categories namely, Administration tools, Wikis, CMSs and Online Shops. Second step is to dynamically analyze the applications to see if vulnerable lines of code are fired during user interaction. To address that, we create automation script to perform the tasks mentioned in online tutorials of those applications. To come up with a representative profile of general users of each application we enhance the code-coverage from tutorials with the coverage from spiders that crawl web applications and monkey tests that try to brute force every possible action within the application. Third, based on the coverage resulted from tests in step two, we measure the coverage of code paths that intersect with known vulnerable lines. Arguably, if most users of an application do not use a feature, that feature can be removed, hence, removing the vulnerabilities within it.
 
 %\todo{(Finalize numbers)} Our results show that on average we can remove \%75 of vulnerabilities by removing functions that do not fire during general use of users.  Debloating strategies can vary by their level of aggression and how far we want to go in terms of removing code from our application. By removing functions from studied web applications that would not be used by users of an application, we can significantly reduce the attack-surface. In addition to the results, we open source our framework to record the coverage of individual lines within a web application under different usage profiles and automatically debloat the application under file and function level debloating conditions.
