--- a/sections/lim/parts/background.tex
+++ b/sections/lim/parts/background.tex
@@ -25,9 +25,9 @@ external dependencies, they include entire packages with no effective way of
 disabling and/or removing the parts of these packages and frameworks that
 their applications do not require.
 
-\subsection{Motivating web-application debloating}
+\subsection{Motivating web application debloating}
 
-In this study, we look at the bloat of web applications and quantify how
+In this chapter, we look at the bloat of web applications and quantify how
 debloating can provide concrete security benefits. Even
 though debloating has been successfully applied in other contexts, we argue
 that the
