--- a/sections/lim/parts/introduction.tex
+++ b/sections/lim/parts/introduction.tex
@@ -43,7 +43,7 @@ Kurmus:2011:ASR:1972551.1972557}) and more recently on shared
 libraries~\cite{mishra2018shredder,quach2018debloating} and compiled binary
 applications~\cite{heo2018effective}.
 
-In this paper, we present the first evaluation of the applicability of software
+In this chapter, we present the first evaluation of the applicability of software
 debloating for web applications. We focus on four popular open-source PHP
 applications (phpMyAdmin, MediaWiki, Magento, and WordPress) and we map the CVEs of 69
 reported vulnerabilities to the source code of each web application. We utilize
@@ -79,4 +79,4 @@ of PHP gadgets that could be used in Property Oriented Programming attacks
 
 \end{itemize}
 
-\noindent To motivate further research into debloating web applications and to ensure the reproducibility of our findings, we are releasing \emph{all} data and software artifacts.
+% \noindent To motivate further research into debloating web applications and to ensure the reproducibility of our findings, we are releasing \emph{all} data and software artifacts.
