--- a/thesis.tex
+++ b/thesis.tex
@@ -84,6 +84,8 @@
 \widowpenalty10000
 \clubpenalty10000
 
+\newcommand{\todo}[1]{\textcolor{red}{TODO: #1}\PackageWarning{TODO:}{#1!}}
+
 \begin{document}
 
 \singlespacing %
