--- a/sections/ad/1_introduction.tex
+++ b/sections/ad/1_introduction.tex
@@ -14,9 +14,6 @@ In reality, common web application vulnerabilities such as XSS and SQL injection
 At the same time, vulnerable functions in web applications often reside in features that are unnecessary for the majority of the users of the applications~\cite{azad2019less}. 
 Therefore, web application debloating mechanisms have historically focused on removing live code that is deemed unused under specific workloads. 
 
-For instance, Amin Azad et al. designed Less is More (LIM), a dynamic debloating system for web applications~\cite{azad2019less}. 
-By running a set of user-mimicking automated tests during the training phase, LIM collects dynamic code-coverage information and removes unused files and functions from web applications. 
-
 Due to the prevalence of dynamic code constructs in web development languages (e.g., PHP, Node.js and Python), end-to-end static analysis is so challenging such that even the state-of-the-art static analysis tools reach an unsupported code structure after analyzing 20 lines of code on average~\cite{altestability}. 
 While this limitation is alleviated by localized and context-specific analysis in the realm of vulnerability discovery, debloating requires sound resolution for dynamic code structures (e.g., dynamic file inclusion, functions calls, etc.). 
 Failure to resolve dynamic code structures results in removal of necessary features, and therefore, can lead to breakage when interacting with the debloated web applications.
@@ -29,7 +26,7 @@ We developed \animatedead{}, a distributed analysis system which contains a PHP 
 The main contribution of our concolic execution system is its ability to perform end-to-end program analysis. 
 Our generic concolic execution engine can be employed for vulnerability assessment, code analysis, and as we discuss in this paper, for software debloating. 
 
-In this paper, we focused on using \animatedead{} to perform a module reachability analysis for target web applications given their entry points, and use this information to debloat unused modules. 
+In this chapter, we focused on using \animatedead{} to perform a module reachability analysis for target web applications given their entry points, and use this information to debloat unused modules. 
 This approach benefits from the abstractions of user-provided parameters and an abstract database and network, which results in debloated web applications that retain \emph{all} the code responsible for the exercised entry points from the logs. 
 This is in contrast with dynamic debloating schemes that suffer from lack of generalizability, since they only retain the \emph{exact} code paths that were exercised during training, which is biased towards successful actions and overlooks less common yet critical features (e.g., error handlers). 
 
