--- a/sections/chapter_six_conclusion.tex
+++ b/sections/chapter_six_conclusion.tex
@@ -1,28 +1,28 @@
-\chapter{Conclusion and Future Work}
+\chapter{Conclusion}
 \label{chap:conclusion}
 
-In this dissertation we evaluated the potential benefits of debloating in terms of security. 
+In this dissertation we evaluated the benefits of debloating in terms of security. 
 To that end, we presented our pipeline to simulate usage behaviors, debloat web applications with file and function level granularity and introduced various metrics to quantify the security benefits of debloating web applications. 
-By evaluating our framework on four popular PHP applications (phpMyAdmin, MediaWiki, Magento, and WordPress) we demonstrated a decrease of 46.8\% on average in LLOC (Logical Lines Of Code) reduction and a comparable reduction in the cyclomatic complexity of debloated applications. 
-We discussed how the structure of applications affects the debloating results (e.g., monolithic design of WordPress leads to less debloating compared to modular ones such as Magento). 
+By evaluating our framework on four popular PHP applications (phpMyAdmin, MediaWiki, Magento, and WordPress) we demonstrated a reduction of 46.8\% on average in LLOC (Logical Lines Of Code) and a comparable reduction in the cyclomatic complexity of debloated applications. 
+We discussed how the structure of applications affects the debloating results (e.g., monolithic design of WordPress leads to less debloating compared to modular web applications such as Magento). 
 From the perspective of code reuse attacks, we witnessed that debloating disrupts the majority of publicly known gadget chains used in object injection attacks. 
 Similarly, debloating removed up to 60\% of high impact CVEs. 
 
 After demonstrating the effectiveness of debloating web applications from a security perspective, we proposed a novel approach for debloating. 
 Unlike the prior work which focuses on a single debloated application, we explored the idea of ``role-based debloating''. 
-Our system named \dbltr{} takes in the code coverage information of web application users and clusters users with similar usage behavior together. 
+Our system named \dbltr{} takes in the code-coverage information of web application users and clusters users with similar usage behavior together. 
 Based on these clusters, it produces multiple versions of debloated web applications each of which are tailored for a group of users. 
 
-We started this project by conducting a user study to understand how experienced administrators and developers interact with web applications. 
-We then used this information in \dbltr{} to produce debloated web applications and evaluate their security metrics. 
+We initiated this project by conducting a user study to understand how experienced administrators and developers interact with web applications. 
+Motivated by the initial findings, we the information from the user study in \dbltr{} to produce debloated web applications and evaluate their security metrics. 
 Our results show that role-based debloating can further reduce the size of web applications in terms of LLOC by 30\%, and remove the severe security vulnerabilities by up to 80\% for some roles, compared to the globally debloated application similar to our approach in Chapter~\ref{chap:lim}. 
 \dbltr{} also incorporates the content-delivery modules to transparently extract user identities from login requests and route their requests towards their custom debloated web applications. 
-Overall, our results indicate that role-based debloating is a practical approach with tangile security benefits.
+Overall, our results indicate that role-based debloating is a practical approach with tangible security benefits. 
 
-\subsection*{Future Work}
-\label{sec:futurework}
+Lastly, to address the drawbacks of dynamic debloating schemes, we designed our concolic execution engine named \animatedead{}. 
+Using this system, we performed a module reachability analysis from the entry points of web applications and removed the unused code based on the exercised entry points. 
+We showed that concolic execution can provide comparable security gains in debloated web applications on par with dynamic schemes. 
+Specifically, we demonstrated a reduction of 47\% in LLOC and 55\% reduction in critical API calls for web applications debloated by \animatedead{}. 
 
-In Chapter~\ref{chap:ad}, we discussed the design of \animatedead{} and summarized the existing challenges. 
-For the remainder of my PhD, I plan to complete building the \animatedead{}'s emulator to be able to correctly emulate popular PHP applications through the iterative debugging process discussed in Section~\ref{sec:debugging}. 
-Moreover, I plan to experiment and design an optimized path prioritization heuristic that fits the code structure of existing web applications and leads to a fast convergence of correct code coverage. 
-Finally, I plan to evaluate the debloating performance of \animatedead{} on popular PHP applications and report on the findings and security gains. 
+Through the analysis of modern web applications and development of debloating frameworks, we supported our thesis statement that modern web applications are exposed to an unnecessarily large attack-surface due to the code-bloat. 
+We proposed dynamic and hybrid debloating mechanisms that can successfully identify unused modules in web applications and automatically remove them via debloating, thereby, protecting web applications against the exploitation of vulnerabilities. 
