--- a/sections/lim/parts/discussion.tex
+++ b/sections/lim/parts/discussion.tex
@@ -24,7 +24,7 @@ require users to enable that functionality. This limitation only applies to repo
 Our approach results in lower bounds for CVE removal since disabling modules through application configuration does not guarantee removal of all code paths that trigger those modules. Taking CVE-2019-6703 as an example, a vulnerability was discovered in the WordPress ``Total Donations'' plugin~\cite{wordpressPlugin} and disabling this plugin did not prevent attackers from invoking the vulnerable end point and running their exploits.
 
 \vspace{1ex}
-\noindent\textbf{Dynamic code coverage:}  Given our reliance on dynamic
+\noindent\textbf{Dynamic code-coverage:}  Given our reliance on dynamic
 code-coverage techniques, it is clear that the success of debloating a web application
 is tightly related to its usage profile. Even though we constructed profiles
 in a way that is reproducible and unbiased (i.e., by relying on external
@@ -73,7 +73,7 @@ leave the design of such systems for future work.
 
 \vspace{1ex}
 \noindent\textbf{Metrics to measure debloating effectiveness:}
-In this paper, we use Cyclomatic Complexity (CC), Logical Lines of Code
+In this project, we use Cyclomatic Complexity (CC), Logical Lines of Code
 (LLOC), reduction in historical CVEs, and POP gadget reduction as four metrics to measure the
 effects of debloating on different web applications. However, not every line of code
 contributes equally to a program's attack-surface. For example, 15\% of removed
